<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.developersd3.bwsmobile.activity.SubMenuCadastroAlmoxarife"
    tools:showIn="@layout/activity_sub_menu_cadastro_almoxarife">

    <Button
        android:id="@+id/cadastrosFerramentasBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_arredondado_verde"
        android:textColor="@color/white"
        android:width="250dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ferramenta_txt" />

    <Button
        android:id="@+id/cadastrosPatrimonioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_arredondado_verde"
        android:textColor="@color/white"
        android:width="250dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cadastrosFerramentasBtn"
        android:text="@string/patrimonio_txt" />

    <Button
        android:id="@+id/cadastrosEPIBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_arredondado_verde"
        android:textColor="@color/white"
        android:width="250dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cadastrosPatrimonioBtn"
        android:text="@string/epi_txt" />

    <Button
        android:id="@+id/cadastrosAlmoxarifeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_arredondado_verde"
        android:textColor="@color/white"
        android:width="250dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cadastrosEPIBtn"
        android:text="@string/almoxarifado_txt" />

</RelativeLayout>
